--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,84 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
+###################
+# compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.pdb
+*.dll.config
+*.cache
+*.suo
+.vs/
+# Include dlls if they’re in the NuGet packages directory
+!/packages/*/lib/*.dll
+!/packages/*/lib/*/*.dll
+# Include dlls if they're in the CommonReferences directory
+!*CommonReferences/*.dll
+####################
+# VS Upgrade stuff #
+####################
+UpgradeLog.XML
+_UpgradeReport_Files/
+###############
+# Directories #
+###############
+bin/
+obj/
+TestResults/
+###################
+# Web publish log #
+###################
+*.Publish.xml
+#############
+# Resharper #
+#############
+/_ReSharper.*
+*.ReSharper.*
+############
+# Packages #
+############
+# it’s better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+######################
+# Logs and databases #
+######################
+*.log
+*.sqlite
+# OS generated files #
+######################
+.DS_Store?
+ehthumbs.db
+Icon?
+Thumbs.db
+[Bb]in
+[Oo]bj
+[Tt]est[Rr]esults
+*.suo
+*.user
+*.[Cc]ache
+*[Rr]esharper*
+packages
+NuGet.exe
+_[Ss]cripts
+*.exe
+*.dll
+*.nupkg
+*.ncrunchsolution
+*.dot[Cc]over
+EnjoyEat/.vs/EnjoyEat/FileContentIndex/12eb083f-193e-4ee4-8670-df7cf9e4351e.vsidx
+EnjoyEat/.vs/EnjoyEat/FileContentIndex/351941f6-6e69-4dc7-a0ff-bcbeeee587c8.vsidx
+EnjoyEat/.vs/EnjoyEat/FileContentIndex/6b417b7e-052c-4655-b8dd-66cf97a0ee49.vsidx
+EnjoyEat/.vs/EnjoyEat/FileContentIndex/be203aad-f72b-45f4-963d-b44d7190135a.vsidx
+EnjoyEat/.vs/EnjoyEat/DesignTimeBuild/.dtbcache.v2
+EnjoyEat/.vs/ProjectEvaluation/enjoyeat.metadata.v6.1
+EnjoyEat/.vs/ProjectEvaluation/enjoyeat.projects.v6.1
+EnjoyEat/.vs/EnjoyEat/FileContentIndex/read.lock
