結帳頁面增加vue前後端邏輯

--- a/EnjoyEat/EnjoyEat/EnjoyEat.csproj
+++ b/EnjoyEat/EnjoyEat/EnjoyEat.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\NewFolder1\**" />
+    <Content Remove="Views\NewFolder1\**" />
+    <EmbeddedResource Remove="Views\NewFolder1\**" />
+    <None Remove="Views\NewFolder1\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="bundleconfig.json" />
   </ItemGroup>
 
@@ -124,6 +131,10 @@
   <ItemGroup>
     <Folder Include="Areas\OrderForHere\Data\" />
     <Folder Include="Areas\OrderForHere\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\NewFolder1\**" />
   </ItemGroup>
 
 </Project>
