--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -9,6 +9,12 @@
     }
   },
   "AllowedHosts": "*",
+  "Authentication": {
+    "Facebook": {
+      "AppId": "133319269756083",
+      "AppSecret": "90af6c38d525c16f8acb91e83c5e292d"
+    }
+  },
   "SassCompiler": {
     "SourceFolder": "wwwroot/css",
     "TargetFolder": "wwwroot/css",
