--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -36,5 +36,6 @@
     "HashIV": "C0CJHId8Uu8o6CcP",
     "IncludePaths": [],
     "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com"
-  }
+  },
+  "AesKey": "98765432109876543210987654321098"
 }
