--- a/EnjoyEat/EnjoyEat/EnjoyEat.csproj
+++ b/EnjoyEat/EnjoyEat/EnjoyEat.csproj
@@ -146,4 +146,8 @@
     <UpToDateCheckInput Remove="Views\NewFolder1\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Models\DTO\ProductsDTO.cs" />
+  </ItemGroup>
+
 </Project>
