--- a/EnjoyEat/EnjoyEat/EnjoyEat.csproj
+++ b/EnjoyEat/EnjoyEat/EnjoyEat.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Content Remove="bundleconfig.json" />
+    <Content Remove="Views\MemberManagement\EditPasswordIndex.cshtml" />
   </ItemGroup>
 
   <ItemGroup>
