串接金流API連線成功，傳輸數據待debug，內用外帶分流紀錄參數

--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -35,7 +35,9 @@
     "HashKey": "6CpbGMWgAx9Ux7034fvlXB4dloscVeQE",
     "HashIV": "C0CJHId8Uu8o6CcP",
     "IncludePaths": [],
-    "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com"
+    "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com",
+    "NotifyUrl": "https://724a-36-231-99-147.ngrok-free.app/Payment/Notify",
+    "ReturnUrl": "https://724a-36-231-99-147.ngrok-free.app/Payment/Return"
   },
   "AesKey": "98765432109876543210987654321098"
 }
