--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -36,8 +36,8 @@
     "HashIV": "C0CJHId8Uu8o6CcP",
     "IncludePaths": [],
     "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com",
-    "NotifyUrl": "https://724a-36-231-99-147.ngrok-free.app/Payment/Notify",
-    "ReturnUrl": "https://724a-36-231-99-147.ngrok-free.app/Payment/Return"
+    "NotifyUrl": "https://071e-60-250-79-114.ngrok-free.app/Payment/Notify",
+    "ReturnUrl": "https://071e-60-250-79-114.ngrok-free.app/Payment/OnlineReturn"
   },
   "AesKey": "98765432109876543210987654321098"
 }
