金流付款時email自動帶入，關閉多餘付款選項

--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -37,7 +37,7 @@
     "IncludePaths": [],
     "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com",
     "NotifyUrl": "https://071e-60-250-79-114.ngrok-free.app/Payment/Notify",
-    "ReturnUrl": "https://071e-60-250-79-114.ngrok-free.app/Payment/OnlineReturn"
+    "ReturnUrl": ""
   },
   "AesKey": "98765432109876543210987654321098"
 }
