金流修改成雲端部屬連結

--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -36,9 +36,9 @@
     "HashIV": "C0CJHId8Uu8o6CcP",
     "IncludePaths": [],
     "GoogleApiClientId": "944982155391-5cvqtd7v905vnh20s3gui17k7glin214.apps.googleusercontent.com",
-    "NotifyUrl": "https://071e-60-250-79-114.ngrok-free.app/Payment/Notify",
+    "NotifyUrl": "https://enjoyeat.azurewebsites.net/Payment/Notify",
     "ReturnUrl": "",
-    "ClientBackURL": "https://071e-60-250-79-114.ngrok-free.app"
+    "ClientBackURL": "https://enjoyeat.azurewebsites.net/"
   },
   "AesKey": "98765432109876543210987654321098"
 }
