--- a/EnjoyEat/EnjoyEat/appsettings.json
+++ b/EnjoyEat/EnjoyEat/appsettings.json
@@ -16,19 +16,19 @@
       "AppSecret": "90af6c38d525c16f8acb91e83c5e292d"
     }
   },
-  "SassCompiler": {
-    "SourceFolder": "wwwroot/css",
-    "TargetFolder": "wwwroot/css",
-    "Arguments": "--style=compressed",
-    "GenerateScopedCss": false,
-    "ScopedCssFolders": [
-      "Views",
-      "Pages",
-      "Shared",
-      "Components"
-    ],
-    "IncludePaths": []
-  },
+  //"SassCompiler": {
+  //  "SourceFolder": "wwwroot/css",
+  //  "TargetFolder": "wwwroot/css",
+  //  "Arguments": "--style=compressed",
+  //  "GenerateScopedCss": false,
+  //  "ScopedCssFolders": [
+  //    "Views",
+  //    "Pages",
+  //    "Shared",
+  //    "Components"
+  //  ],
+  //  "IncludePaths": []
+  //},
   "Payment": {
     "ApiUrl": "https://ccore.newebpay.com/MPG/mpg_gateway",
     "MerchantID": "MS149046666",
